# rknn-llm

examples/rkllm_api_demo/: CMakeLists.txt
examples/rkllm_api_demo/debian/: README  README.Debian  README.source  changelog  control  rules
examples/rkllm_api_demo/src/: llm_demo.cpp  multimodel_demo.cpp
examples/rkllm_multimodel_demo/debian/: README  README.Debian  README.source  changelog  control  rules
examples/rkllm_multimodel_demo/deploy/: CMakeLists.txt
examples/rkllm_multimodel_demo/deploy/src/: llm.cpp  llm_test.cpp  main.cpp
examples/rkllm_server_demo/debian/: README  README.Debian  README.source  changelog  control  copyright  install  rkllm-server-flask.install  rkllm-server-flask.postinst  rkllm-server-gradio.install  rkllm-server-gradio.postinst  rules
examples/rkllm_server_demo/rkllm_server/: flask_server.py  gradio_server.py
rkllm-runtime/debian/: changelog  control  copyright  files  librkllmrt-dev.install  librkllmrt.install  librkllmrt.substvars
