cmake_minimum_required(VERSION 3.10)
project(rkllm_demo)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(SOURCE_FILES_1 src/llm_demo.cpp)
add_executable(rkllm-simple ${SOURCE_FILES_1})

set(SOURCE_FILES_2 src/multimodel_demo.cpp)
add_executable(rkllm-imgdec ${SOURCE_FILES_2})

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
if(NOT RKLLM_API_PATH)
    find_path(RKLLM_INCLUDE_DIR NAMES rkllm.h PATHS /usr/include /usr/local/include)
    find_library(RKLLM_RT_LIB NAMES rkllmrt PATHS /usr/lib /usr/local/lib)
else()
    find_path(RKLLM_INCLUDE_DIR NAMES rkllm.h PATHS "${RKLLM_API_PATH}/include")
    find_library(RKLLM_RT_LIB NAMES rkllmrt PATHS "${RKLLM_API_PATH}")
endif()
if(NOT RKLLM_RT_LIB OR NOT RKLLM_INCLUDE_DIR)
    set(RKLLM_API_PATH "${CMAKE_SOURCE_DIR}/../../rkllm-runtime/${CMAKE_SYSTEM_NAME}/librkllm_api")
    set(RKLLM_RT_LIB ${RKLLM_API_PATH}/aarch64/librkllmrt.so)
    include_directories(${RKLLM_API_PATH}/include)
else()
    include_directories(${RKLLM_INCLUDE_DIR})
endif()
endif()

if(CMAKE_SYSTEM_NAME STREQUAL "Android")
    set(RKLLM_API_PATH "${CMAKE_SOURCE_DIR}/../../rkllm-runtime/${CMAKE_SYSTEM_NAME}/librkllm_api")
    set(RKLLM_RT_LIB ${RKLLM_API_PATH}/${CMAKE_ANDROID_ARCH_ABI}/librkllmrt.so)
    include_directories(${RKLLM_API_PATH}/include)
    find_package(OpenMP REQUIRED)
    target_link_libraries(rkllm-simple  ${RKLLM_RT_LIB} log OpenMP::OpenMP_CXX)
    target_link_libraries(rkllm-imgdec  ${RKLLM_RT_LIB} log OpenMP::OpenMP_CXX)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    target_link_libraries(rkllm-simple  ${RKLLM_RT_LIB})
    target_link_libraries(rkllm-imgdec  ${RKLLM_RT_LIB})
    install(TARGETS rkllm-simple rkllm-imgdec DESTINATION bin)
endif()


